Cambios de optimización en el código
Se han cambiado algunas mediaquerys, la optimización del uso del teclado (ya no detecta teclas como '1', 'F12', 'ESC', 'CNTRL', etc...), entre otras cosas

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -264,12 +264,9 @@ button.boton {
         height: auto;
     }
     .filaIntento {
-        width: 50%;
-        height: auto;
-        margin: calc(1px + .1vw);
-        display:flex;
-        justify-content: space-between;
-        align-items: stretch;
-        gap: 5px;
+        width: 100%;
+    }
+    .teclado {
+        width: 75vw;
     }
   }
